# Neobis_Mobi_Market

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
mobi_market/goods/: models.py  serializers.py  urls.py  views.py
mobi_market/goods/migrations/: 0001_create_card_product.py
mobi_market/mobi_market/: asgi.py  settings.py  urls.py  wsgi.py
mobi_market/users/: admin.py  models.py  serializers.py  urls.py  views.py
mobi_market/users/migrations/: 0001_create_user.py  0002_create_personaldata.py  0003_add_field_to_personaldata.py  0004_create_field_code_activation.py  0005_alter_personaldata_code_activation.py  0006_create_model_phonenumber.py
