[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Kondratiuk Marina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
python-dotenv = "^1.0.0"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
